--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -9,7 +9,8 @@
     kubectl_version: "1.27.0" 
     kind_cluster_name: "east"   
     helm_version: "3.6.3"  
-    argocd_helm_repo_url: "https://github.com/submariner-poc/argocd.git"             
+    argocd_helm_repo_url: "https://github.com/submariner-poc/argocd.git"  
+    argocd_target_directory: "argocd"        
 
   tasks:
     - name: Update apt cache
@@ -48,4 +49,5 @@
     - name: Deploy Argocd
       include_tasks: deploy_argocd.yml  
       vars:
-        repo_url: "{{ argocd_helm_repo_url }}"        
+        repo_url: "{{ argocd_helm_repo_url }}"  
+        target_directory: "{{ argocd_target_directory }}"                
